--- a/templates/signup.html
+++ b/templates/signup.html
@@ -36,7 +36,7 @@
                     
                     <button type="submit" class="btn btn-primary">Signup</button>
                     Existing User? <a href="/login">Login</a>
-                    
+                    <br>{{msg}}
                   </form>
             </div>
         </div>
