--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <label class="me-auto">Welcome {username}</label>
+            <label class="me-auto">Welcome {{user}}</label>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav mb-2 mb-lg-0 me-auto">
                     <li class="nav-item">
