--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
         <div id="panel">
             <div id="input-form">
                 <h2>Login Page</h2>
-                <form>
+                <form method="POST" action="/login">
                     <div class="mb-3">
                       <label for="username" class="form-label">User Name</label>
                       <input type="text" class="form-control" name="uname" id="username" aria-describedby="userHelp">
@@ -26,6 +26,7 @@
                     
                     <button type="submit" class="btn btn-primary">Login</button>
                     New User? <a href="/register">Register</a>
+                    <br>{{msg}}
                     
                     
                   </form>
